--- a/public/shop.html
+++ b/public/shop.html
@@ -2,51 +2,49 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Магазин</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
+
   <div class="container py-4">
-    <h1 class="mb-4 text-center">🛍 Наш магазин</h1>
+    <h1 class="mb-4">Наш магазин</h1>
     <div id="products" class="row g-4"></div>
   </div>
 
   <script>
-    const productsEl = document.getElementById('products');
-
     async function loadProducts() {
-      try {
-        const res = await fetch('/api/products');
-        const products = await res.json();
-        console.log("Products from API:", products); // для отладки
+      const res = await fetch('/api/products');
+      const products = await res.json();
+      const container = document.getElementById('products');
+      container.innerHTML = '';
 
-        if (!products.length) {
-          productsEl.innerHTML = `<p class="text-center text-muted">Пока нет товаров 😢</p>`;
-          return;
-        }
+      if (products.length === 0) {
+        container.innerHTML = '<p>Товаров пока нет</p>';
+        return;
+      }
 
-        productsEl.innerHTML = products.map(p => `
+      products.forEach(p => {
+        // если image_url нет → ставим заглушку
+        const img = p.image_url ? p.image_url : 'https://via.placeholder.com/300x200?text=Нет+фото';
+
+        const card = `
           <div class="col-md-4">
-            <div class="card shadow-sm h-100">
-              <img src="${p.image_url ? window.location.origin + p.image_url : 'https://via.placeholder.com/300'}" class="card-img-top" style="object-fit:cover;height:200px;">
+            <div class="card h-100 shadow-sm">
+              <img src="${img}" class="card-img-top" alt="${p.title}">
               <div class="card-body d-flex flex-column">
                 <h5 class="card-title">${p.title}</h5>
-                <p class="card-text flex-grow-1">💰 ${p.price} ₽</p>
-                <button class="btn btn-primary w-100 mt-auto" onclick="buy('${p.id}')">Купить</button>
+                <p class="card-text">${p.description || ''}</p>
+                <div class="mt-auto">
+                  <p class="fw-bold">${p.price} ₽</p>
+                  <button class="btn btn-primary w-100">Купить</button>
+                </div>
               </div>
             </div>
           </div>
-        `).join('');
-      } catch (e) {
-        console.error("Ошибка загрузки товаров:", e);
-        productsEl.innerHTML = `<p class="text-center text-danger">Ошибка загрузки товаров</p>`;
-      }
-    }
-
-    function buy(id) {
-      alert("Покупка товара ID: " + id);
-      // тут потом можно добавить оплату через Telegram или Stripe
+        `;
+        container.innerHTML += card;
+      });
     }
 
     loadProducts();
