--- a/public/shop.html
+++ b/public/shop.html
@@ -2,16 +2,68 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Магазин</title>
+  <title>Smart Service</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light">
 
+  <!-- Шапка магазина -->
+  <header class="bg-primary text-white py-3 mb-4">
+    <div class="container text-center">
+      <h1 class="mb-2">Smart Service</h1>
+      <!-- Категории -->
+      <nav>
+        <a href="#" class="btn btn-light btn-sm mx-1">Одежда</a>
+        <a href="#" class="btn btn-light btn-sm mx-1">Обувь</a>
+        <a href="#" class="btn btn-light btn-sm mx-1">Аксессуары</a>
+      </nav>
+    </div>
+  </header>
+
+  <!-- Основной блок с товарами -->
   <div class="container py-4">
-    <h1 class="mb-4">Наш магазин</h1>
     <div id="products" class="row g-4"></div>
   </div>
 
+  <!-- Footer -->
+  <footer class="bg-dark text-white py-4 mt-5">
+    <div class="container text-center">
+      <p class="mb-1">Smart Service / ИП Ефимова Анастасия Александровна</p>
+      <p class="mb-1">ИНН: 1234567890</p>
+      <p class="mb-1">Адрес: г. Москва, ул. Примерная, д. 1</p>
+      <p class="mb-1">Email: info@smartservice.ru | Телефон: +7 (999) 123-45-67</p>
+    </div>
+  </footer>
+
+  <!-- Модальное окно регистрации -->
+  <div class="modal fade" id="registerModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title">Добро пожаловать! Регистрация</h5>
+        </div>
+        <div class="modal-body">
+          <form id="registerForm">
+            <div class="mb-3">
+              <label class="form-label">Имя</label>
+              <input type="text" class="form-control" name="name" required>
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Email</label>
+              <input type="email" class="form-control" name="email" required>
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Телефон</label>
+              <input type="tel" class="form-control" name="phone" required>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">Зарегистрироваться</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     async function loadProducts() {
       const res = await fetch('/api/products');
@@ -25,29 +77,83 @@
       }
 
       products.forEach(p => {
-        // если image_url нет → ставим заглушку
         const img = p.image_url ? p.image_url : 'https://via.placeholder.com/300x200?text=Нет+фото';
 
-        const card = `
-          <div class="col-md-4">
-            <div class="card h-100 shadow-sm">
-              <img src="${img}" class="card-img-top" alt="${p.title}">
-              <div class="card-body d-flex flex-column">
-                <h5 class="card-title">${p.title}</h5>
-                <p class="card-text">${p.description || ''}</p>
-                <div class="mt-auto">
-                  <p class="fw-bold">${p.price} ₽</p>
-                  <button class="btn btn-primary w-100">Купить</button>
-                </div>
+        const card = document.createElement('div');
+        card.className = 'col-md-4';
+        card.innerHTML = `
+          <div class="card h-100 shadow-sm">
+            <img src="${img}" class="card-img-top" alt="${p.title}">
+            <div class="card-body d-flex flex-column">
+              <h5 class="card-title">${p.title}</h5>
+              <p class="card-text">${p.description || ''}</p>
+              <div class="mt-auto">
+                <p class="fw-bold">${p.price} ₽</p>
+                <button class="btn btn-primary w-100 buy-btn">Купить</button>
               </div>
             </div>
           </div>
         `;
-        container.innerHTML += card;
+
+        // Обработка кнопки "Купить"
+        card.querySelector('.buy-btn').addEventListener('click', async () => {
+          const userData = JSON.parse(localStorage.getItem('userData'));
+          if (!userData) {
+            alert('Пожалуйста, зарегистрируйтесь!');
+            return;
+          }
+
+          const order = {
+            user: userData,
+            productId: p.id
+          };
+
+          await fetch('/api/buy', {
+            method: 'POST',
+            headers: {'Content-Type': 'application/json'},
+            body: JSON.stringify(order)
+          });
+
+          alert(`Товар "${p.title}" добавлен в корзину!`);
+        });
+
+        container.appendChild(card);
       });
     }
 
     loadProducts();
+
+    // Проверка регистрации
+    document.addEventListener('DOMContentLoaded', () => {
+      if (!localStorage.getItem('userRegistered')) {
+        const registerModal = new bootstrap.Modal(document.getElementById('registerModal'));
+        registerModal.show();
+
+        document.getElementById('registerForm').addEventListener('submit', async (e) => {
+          e.preventDefault();
+          const form = e.target;
+          const data = {
+            name: form.name.value,
+            email: form.email.value,
+            phone: form.phone.value
+          };
+
+          // Отправка на сервер
+          await fetch('/api/register', {
+            method: 'POST',
+            headers: {'Content-Type': 'application/json'},
+            body: JSON.stringify(data)
+          });
+
+          localStorage.setItem('userRegistered', 'true');
+          localStorage.setItem('userData', JSON.stringify(data));
+          registerModal.hide();
+        });
+      } else {
+        const storedData = JSON.parse(localStorage.getItem('userData'));
+        if (!storedData) localStorage.removeItem('userRegistered'); // перезапуск регистрации при проблемах
+      }
+    });
   </script>
 </body>
 </html>
