--- a/public/admin.html
+++ b/public/admin.html
@@ -2,110 +2,259 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
-  <title>Админка — Магазин</title>
+  <title>Admin - Smart Service</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body class="container py-4">
-  <h1 class="mb-4">Админка</h1>
+<body class="bg-light">
 
-  <!-- Форма добавления товара -->
-  <form id="productForm" class="mb-4">
-    <div class="mb-3">
-      <label class="form-label">Название товара</label>
-      <input type="text" class="form-control" name="title" required>
-    </div>
-    <div class="mb-3">
-      <label class="form-label">Описание</label>
-      <textarea class="form-control" name="description"></textarea>
-    </div>
-    <div class="mb-3">
-      <label class="form-label">Цена</label>
-      <input type="number" class="form-control" name="price" required>
-    </div>
-    <div class="mb-3">
-      <label class="form-label">Фото</label>
-      <input type="file" class="form-control" id="imageInput" accept="image/*">
-    </div>
-    <button type="submit" class="btn btn-primary">Добавить товар</button>
-  </form>
+  <div class="container py-4">
+    <h1 class="mb-4 text-center">Админ-панель Smart Service</h1>
 
-  <hr>
-  <h2>Список товаров</h2>
-  <div id="products" class="row"></div>
+    <!-- Информация о магазине -->
+    <section class="mb-5">
+      <h3>Информация о магазине</h3>
+      <form id="storeForm" class="row g-3">
+        <div class="col-md-6">
+          <label class="form-label">Название магазина</label>
+          <input type="text" class="form-control" name="name">
+        </div>
+        <div class="col-md-6">
+          <label class="form-label">ИНН</label>
+          <input type="text" class="form-control" name="inn">
+        </div>
+        <div class="col-md-6">
+          <label class="form-label">Адрес</label>
+          <input type="text" class="form-control" name="address">
+        </div>
+        <div class="col-md-6">
+          <label class="form-label">Email</label>
+          <input type="email" class="form-control" name="email">
+        </div>
+        <div class="col-md-6">
+          <label class="form-label">Телефон</label>
+          <input type="tel" class="form-control" name="phone">
+        </div>
+        <div class="col-12">
+          <button type="submit" class="btn btn-primary">Сохранить</button>
+        </div>
+      </form>
+    </section>
 
+    <!-- Категории -->
+    <section class="mb-5">
+      <h3>Категории товаров</h3>
+      <div class="d-flex mb-3">
+        <input type="text" id="newCategory" class="form-control me-2" placeholder="Новая категория">
+        <button class="btn btn-success" id="addCategoryBtn">Добавить</button>
+      </div>
+      <ul id="categoryList" class="list-group"></ul>
+    </section>
+
+    <!-- Товары -->
+    <section class="mb-5">
+      <h3>Товары</h3>
+      <button class="btn btn-success mb-3" id="addProductBtn">Добавить товар</button>
+      <div id="productList" class="row g-3"></div>
+    </section>
+
+    <!-- Пользователи -->
+    <section class="mb-5">
+      <h3>Зарегистрированные пользователи</h3>
+      <ul id="userList" class="list-group"></ul>
+    </section>
+  </div>
+
+  <!-- Модальное окно для добавления/редактирования товара -->
+  <div class="modal fade" id="productModal" tabindex="-1" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="productModalTitle">Добавить товар</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+        </div>
+        <div class="modal-body">
+          <form id="productForm">
+            <input type="hidden" name="id">
+            <div class="mb-3">
+              <label class="form-label">Название</label>
+              <input type="text" class="form-control" name="title" required>
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Описание</label>
+              <textarea class="form-control" name="description"></textarea>
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Цена</label>
+              <input type="number" class="form-control" name="price" required>
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Ссылка на изображение</label>
+              <input type="url" class="form-control" name="image_url">
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Категория</label>
+              <select class="form-select" name="category_id"></select>
+            </div>
+            <button type="submit" class="btn btn-primary w-100">Сохранить</button>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    const API = '/api';
-    const ADMIN_PASS = '012127471266Jo@'; // поменяй на свой пароль!
+    let productModal = new bootstrap.Modal(document.getElementById('productModal'));
 
-    // Загрузка фото на сервер
-    async function uploadImage(file) {
-      const formData = new FormData();
-      formData.append('image', file);
-      const res = await fetch(API + '/upload', { method: 'POST', body: formData });
+    // Загрузка информации о магазине
+    async function loadStore() {
+      const res = await fetch('/api/store_info');
       const data = await res.json();
-      return data.url;
+      const form = document.getElementById('storeForm');
+      form.name.value = data.name || '';
+      form.inn.value = data.inn || '';
+      form.address.value = data.address || '';
+      form.email.value = data.email || '';
+      form.phone.value = data.phone || '';
     }
 
-    // Добавление товара
-    document.getElementById('productForm').addEventListener('submit', async (e) => {
+    document.getElementById('storeForm').addEventListener('submit', async e => {
       e.preventDefault();
       const form = e.target;
-      let image_url = '';
+      const data = {
+        name: form.name.value,
+        inn: form.inn.value,
+        address: form.address.value,
+        email: form.email.value,
+        phone: form.phone.value
+      };
+      await fetch('/api/store_info', {method: 'POST', headers: {'Content-Type': 'application/json'}, body: JSON.stringify(data)});
+      alert('Информация магазина сохранена');
+    });
 
-      const file = document.getElementById('imageInput').files[0];
-      if (file) {
-        image_url = await uploadImage(file);
+    // Категории
+    async function loadCategories() {
+      const res = await fetch('/api/categories');
+      const categories = await res.json();
+      const list = document.getElementById('categoryList');
+      const select = document.querySelector('select[name="category_id"]');
+      list.innerHTML = '';
+      select.innerHTML = '';
+      categories.forEach(cat => {
+        // Список категорий
+        const li = document.createElement('li');
+        li.className = 'list-group-item d-flex justify-content-between align-items-center';
+        li.textContent = cat.name;
+        const btn = document.createElement('button');
+        btn.className = 'btn btn-sm btn-danger';
+        btn.textContent = 'Удалить';
+        btn.onclick = async () => { await fetch(`/api/categories/${cat.id}`, {method:'DELETE'}); loadCategories(); };
+        li.appendChild(btn);
+        list.appendChild(li);
+        // Выпадающий список категорий
+        const option = document.createElement('option');
+        option.value = cat.id;
+        option.textContent = cat.name;
+        select.appendChild(option);
+      });
+    }
+
+    document.getElementById('addCategoryBtn').addEventListener('click', async e => {
+      e.preventDefault();
+      const input = document.getElementById('newCategory');
+      if(!input.value) return;
+      await fetch('/api/categories', {method:'POST', headers:{'Content-Type':'application/json'}, body:JSON.stringify({name: input.value})});
+      input.value='';
+      loadCategories();
+    });
+
+    // Товары
+    async function loadProducts() {
+      const res = await fetch('/api/products');
+      const products = await res.json();
+      const container = document.getElementById('productList');
+      container.innerHTML = '';
+      products.forEach(p => {
+        const div = document.createElement('div');
+        div.className='col-md-4';
+        div.innerHTML=`
+          <div class="card p-2 h-100">
+            <h5>${p.title}</h5>
+            <p>${p.description || ''}</p>
+            <p class="fw-bold">${p.price} ₽</p>
+            <div class="d-flex justify-content-between">
+              <button class="btn btn-sm btn-warning edit-btn">Редактировать</button>
+              <button class="btn btn-sm btn-danger delete-btn">Удалить</button>
+            </div>
+          </div>
+        `;
+        // Удаление
+        div.querySelector('.delete-btn').onclick = async () => {
+          await fetch(`/api/products/${p.id}`, {method:'DELETE'});
+          loadProducts();
+        };
+        // Редактирование
+        div.querySelector('.edit-btn').onclick = () => openProductModal(p);
+        container.appendChild(div);
+      });
+    }
+
+    // Пользователи
+    async function loadUsers() {
+      const res = await fetch('/api/users');
+      const users = await res.json();
+      const list = document.getElementById('userList');
+      list.innerHTML = '';
+      users.forEach(u => {
+        const li = document.createElement('li');
+        li.className = 'list-group-item';
+        li.textContent = `${u.name} | ${u.email} | ${u.phone}`;
+        list.appendChild(li);
+      });
+    }
+
+    // Открытие модального окна для добавления/редактирования
+    function openProductModal(product=null) {
+      const form = document.getElementById('productForm');
+      if(product){
+        document.getElementById('productModalTitle').textContent='Редактировать товар';
+        form.id.value = product.id;
+        form.title.value = product.title;
+        form.description.value = product.description || '';
+        form.price.value = product.price;
+        form.image_url.value = product.image_url || '';
+        form.category_id.value = product.category_id || '';
+      }else{
+        document.getElementById('productModalTitle').textContent='Добавить товар';
+        form.reset();
+        form.id.value='';
       }
+      productModal.show();
+    }
 
-      const body = {
+    document.getElementById('addProductBtn').addEventListener('click',()=>openProductModal());
+
+    document.getElementById('productForm').addEventListener('submit', async e=>{
+      e.preventDefault();
+      const form = e.target;
+      const data={
         title: form.title.value,
         description: form.description.value,
-        price: form.price.value,
-        image_url,
-        admin_pass: ADMIN_PASS
+        price: parseFloat(form.price.value),
+        image_url: form.image_url.value,
+        category_id: form.category_id.value
       };
-
-      await fetch(API + '/products', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify(body)
-      });
-
-      form.reset();
+      const method = form.id.value ? 'PUT' : 'POST';
+      const url = form.id.value ? `/api/products/${form.id.value}` : '/api/products';
+      await fetch(url,{method, headers:{'Content-Type':'application/json'}, body:JSON.stringify(data)});
+      productModal.hide();
       loadProducts();
     });
 
-    // Показ товаров
-    async function loadProducts() {
-      const res = await fetch(API + '/products');
-      const products = await res.json();
-      const container = document.getElementById('products');
-      container.innerHTML = products.map(p => `
-        <div class="col-md-4 mb-3">
-          <div class="card">
-            <img src="${p.image_url || 'https://via.placeholder.com/300'}" class="card-img-top" alt="">
-            <div class="card-body">
-              <h5 class="card-title">${p.title}</h5>
-              <p class="card-text">${p.description || ''}</p>
-              <p><strong>${p.price} ₽</strong></p>
-              <button class="btn btn-danger btn-sm" onclick="deleteProduct('${p.id}')">Удалить</button>
-            </div>
-          </div>
-        </div>
-      `).join('');
-    }
-
-    // Удаление товара
-    async function deleteProduct(id) {
-      await fetch(API + '/products/' + id, {
-        method: 'DELETE',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ admin_pass: ADMIN_PASS })
-      });
-      loadProducts();
-    }
-
+    loadStore();
+    loadCategories();
     loadProducts();
+    loadUsers();
   </script>
 </body>
 </html>
